Search works. Ordering by last edit works.

--- a/funky-radish/Info.plist
+++ b/funky-radish/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>REALM_KEY</key>
+	<string>$(REALM_KEY)</string>
 	<key> NSBluetoothPeripheralUsageDescription</key>
 	<string>Bluetooth is used to share recipe data at close range.</string>
 	<key>CFBundleDevelopmentRegion</key>
